--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         wget https://launchpad.net/ubuntu/+archive/primary/+files/snappy_1.1.3.orig.tar.gz -O /opt/snappy_1.1.3.orig.tar.gz
         tar -C /opt -xf /opt/snappy_1.1.3.orig.tar.gz
-        mkdir -p /opt/snappy-1.1.3/build && cd /opt/snappy-1.1.3/build && ../configure && make -j8 && make install
+        mkdir -p /opt/snappy-1.1.3/build && cd /opt/snappy-1.1.3/build && ../configure && make -j8 && sudo make install
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
